Add README and initialize VisualizationApp in prophecy project

--- a/prophecyproject/pbt_project.yml
+++ b/prophecyproject/pbt_project.yml
@@ -193,4 +193,13 @@ sqlOrchestratorPipelines:
     - .prophecy/ide/pipelines/aggpipeline.json
     - pipelines/aggpipeline.py
     createdAt: '2025-09-25 20:45:46'
-sqlBusinessApps: {}
+sqlBusinessApps:
+  .prophecy/metadata/sqlbusinessapp/VisualizationApp:
+    name: VisualizationApp
+    schema: null
+    description: null
+    author: umer.tariq@alphabridgeconsulting.com
+    files:
+    - apps/VisualizationApp.json
+    createdAt: '2025-09-26 15:58:06'
+    sqlOrchestrationPipelineName: aggpipeline
